apex class testing

--- a/force-app/main/default/classes/MySampleApexClass.cls
+++ b/force-app/main/default/classes/MySampleApexClass.cls
@@ -4,7 +4,8 @@ public class MySampleApexClass {
     public static String myString = '';
 //sainath the data in method this line 
     // Method definition 
-    //sainath at sentara
+    //testing the devops center
+    //center sainath training 
     public static Integer getCalculatedValue() {
         // Perform some calculation
         return myValue * 2;
